trans/src/main/java/antlr/PrefixGrammarParser.java
// Generated from /home/sasha/Code/MT/trans/src/main/java/antlr/PrefixGrammar.g4 by ANTLR 4.7
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrefixGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, LPAREN=2, RPAREN=3, PRINT=4, DEFINE=5, VAR=6, NUMBER=7, NOT=8, OR=9, 
		AND=10, XOR=11, TRUE=12, FALSE=13, PLUS=14, MINUS=15, MULL=16, DIV=17, 
		EQUAL=18, NOT_EQUAL=19, LOWER=20, LOWER_EQUAL=21, HIGHER=22, HIGHER_EQUAL=23, 
		WS=24;
	public static final int
		RULE_start = 0, RULE_expression = 1, RULE_simple_expression = 2, RULE_if_expression = 3, 
		RULE_else_expression = 4, RULE_print = 5, RULE_define = 6, RULE_var = 7, 
		RULE_logic_value = 8, RULE_logic_operation = 9, RULE_int_value = 10, RULE_int_operations = 11, 
		RULE_compare = 12;
	public static final String[] ruleNames = {
		"start", "expression", "simple_expression", "if_expression", "else_expression", 
		"print", "define", "var", "logic_value", "logic_operation", "int_value", 
		"int_operations", "compare"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'('", "')'", "'print'", "'def'", null, null, "'!'", "'|'", 
		"'&'", "'^'", "'true'", "'false'", "'+'", "'-'", "'*'", "'/'", "'=='", 
		"'!='", "'<'", null, "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IF", "LPAREN", "RPAREN", "PRINT", "DEFINE", "VAR", "NUMBER", "NOT", 
		"OR", "AND", "XOR", "TRUE", "FALSE", "PLUS", "MINUS", "MULL", "DIV", "EQUAL", 
		"NOT_EQUAL", "LOWER", "LOWER_EQUAL", "HIGHER", "HIGHER_EQUAL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrefixGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrefixGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public StringBuilder sb;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			((StartContext)_localctx).sb =  new StringBuilder();
			setState(27);
			expression(_localctx.sb);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public StringBuilder sb;
		public List<Simple_expressionContext> simple_expression() {
			return getRuleContexts(Simple_expressionContext.class);
		}
		public Simple_expressionContext simple_expression(int i) {
			return getRuleContext(Simple_expressionContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExpressionContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression(StringBuilder sb) throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState(), sb);
		enterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			simple_expression(sb);
			sb.append(System.lineSeparator());
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << PRINT) | (1L << DEFINE))) != 0)) {
				{
				{
				setState(31);
				simple_expression(sb);
				sb.append(System.lineSeparator());
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_expressionContext extends ParserRuleContext {
		public StringBuilder sb;
		public If_expressionContext if_expression() {
			return getRuleContext(If_expressionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public Simple_expressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Simple_expressionContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_simple_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterSimple_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitSimple_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitSimple_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_expressionContext simple_expression(StringBuilder sb) throws RecognitionException {
		Simple_expressionContext _localctx = new Simple_expressionContext(_ctx, getState(), sb);
		enterRule(_localctx, 4, RULE_simple_expression);
		try {
			setState(42);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				if_expression(sb);
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				print(sb);
				}
				break;
			case DEFINE:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				define(sb);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_expressionContext extends ParserRuleContext {
		public StringBuilder sb;
		public TerminalNode IF() { return getToken(PrefixGrammarParser.IF, 0); }
		public Logic_valueContext logic_value() {
			return getRuleContext(Logic_valueContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PrefixGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PrefixGrammarParser.RPAREN, 0); }
		public Else_expressionContext else_expression() {
			return getRuleContext(Else_expressionContext.class,0);
		}
		public If_expressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public If_expressionContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_if_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterIf_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitIf_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitIf_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_expressionContext if_expression(StringBuilder sb) throws RecognitionException {
		If_expressionContext _localctx = new If_expressionContext(_ctx, getState(), sb);
		enterRule(_localctx, 6, RULE_if_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(IF);
			sb.append("if (");
			setState(46);
			logic_value(sb);
			sb.append(")");
			setState(48);
			match(LPAREN);
			sb.append(" {").append(System.lineSeparator());
			setState(50);
			expression(sb);
			setState(51);
			match(RPAREN);
			sb.append("}");
			setState(53);
			else_expression(sb);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_expressionContext extends ParserRuleContext {
		public StringBuilder sb;
		public TerminalNode LPAREN() { return getToken(PrefixGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PrefixGrammarParser.RPAREN, 0); }
		public Else_expressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Else_expressionContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_else_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterElse_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitElse_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitElse_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_expressionContext else_expression(StringBuilder sb) throws RecognitionException {
		Else_expressionContext _localctx = new Else_expressionContext(_ctx, getState(), sb);
		enterRule(_localctx, 8, RULE_else_expression);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				sb.append(" else");
				setState(56);
				match(LPAREN);
				sb.append(" {").append(System.lineSeparator());
				setState(58);
				expression(sb);
				setState(59);
				match(RPAREN);
				sb.append("}");
				}
				break;
			case EOF:
			case IF:
			case RPAREN:
			case PRINT:
			case DEFINE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public StringBuilder sb;
		public TerminalNode PRINT() { return getToken(PrefixGrammarParser.PRINT, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PrintContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print(StringBuilder sb) throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState(), sb);
		enterRule(_localctx, 10, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(PRINT);
			sb.append("print(");
			setState(67);
			var(sb);
			sb.append(");");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public StringBuilder sb;
		public Token VAR;
		public TerminalNode DEFINE() { return getToken(PrefixGrammarParser.DEFINE, 0); }
		public TerminalNode VAR() { return getToken(PrefixGrammarParser.VAR, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public DefineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DefineContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineContext define(StringBuilder sb) throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState(), sb);
		enterRule(_localctx, 12, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(DEFINE);
			setState(71);
			((DefineContext)_localctx).VAR = match(VAR);
			sb.append((((DefineContext)_localctx).VAR!=null?((DefineContext)_localctx).VAR.getText():null)).append(" = ");
			setState(73);
			var(sb);
			sb.append(";");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public StringBuilder sb;
		public Logic_valueContext logic_value() {
			return getRuleContext(Logic_valueContext.class,0);
		}
		public Int_valueContext int_value() {
			return getRuleContext(Int_valueContext.class,0);
		}
		public TerminalNode VAR() { return getToken(PrefixGrammarParser.VAR, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public VarContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var(StringBuilder sb) throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState(), sb);
		enterRule(_localctx, 14, RULE_var);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				logic_value(sb);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				int_value(sb);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(VAR);
				sb.append("VAR");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logic_valueContext extends ParserRuleContext {
		public StringBuilder sb;
		public Logic_operationContext logic_operation() {
			return getRuleContext(Logic_operationContext.class,0);
		}
		public List<Logic_valueContext> logic_value() {
			return getRuleContexts(Logic_valueContext.class);
		}
		public Logic_valueContext logic_value(int i) {
			return getRuleContext(Logic_valueContext.class,i);
		}
		public TerminalNode NOT() { return getToken(PrefixGrammarParser.NOT, 0); }
		public TerminalNode VAR() { return getToken(PrefixGrammarParser.VAR, 0); }
		public TerminalNode TRUE() { return getToken(PrefixGrammarParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(PrefixGrammarParser.FALSE, 0); }
		public CompareContext compare() {
			return getRuleContext(CompareContext.class,0);
		}
		public List<Int_valueContext> int_value() {
			return getRuleContexts(Int_valueContext.class);
		}
		public Int_valueContext int_value(int i) {
			return getRuleContext(Int_valueContext.class,i);
		}
		public Logic_valueContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Logic_valueContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_logic_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterLogic_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitLogic_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitLogic_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logic_valueContext logic_value(StringBuilder sb) throws RecognitionException {
		Logic_valueContext _localctx = new Logic_valueContext(_ctx, getState(), sb);
		enterRule(_localctx, 16, RULE_logic_value);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				logic_operation(sb);
				setState(83);
				logic_value(sb);
				setState(84);
				logic_value(sb);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(NOT);
				sb.append("!");
				setState(88);
				logic_value(sb);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				match(VAR);
				sb.append("VAR");
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				match(TRUE);
				sb.append("true");
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(FALSE);
				sb.append("false");
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				compare(sb);
				setState(96);
				int_value(sb);
				setState(97);
				int_value(sb);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logic_operationContext extends ParserRuleContext {
		public StringBuilder sb;
		public TerminalNode OR() { return getToken(PrefixGrammarParser.OR, 0); }
		public TerminalNode AND() { return getToken(PrefixGrammarParser.AND, 0); }
		public TerminalNode XOR() { return getToken(PrefixGrammarParser.XOR, 0); }
		public TerminalNode EQUAL() { return getToken(PrefixGrammarParser.EQUAL, 0); }
		public TerminalNode NOT_EQUAL() { return getToken(PrefixGrammarParser.NOT_EQUAL, 0); }
		public Logic_operationContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Logic_operationContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_logic_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterLogic_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitLogic_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitLogic_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logic_operationContext logic_operation(StringBuilder sb) throws RecognitionException {
		Logic_operationContext _localctx = new Logic_operationContext(_ctx, getState(), sb);
		enterRule(_localctx, 18, RULE_logic_operation);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OR:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(OR);
				sb.append("|");
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(AND);
				sb.append("&");
				}
				break;
			case XOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				match(XOR);
				sb.append("^");
				}
				break;
			case EQUAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				match(EQUAL);
				sb.append("==");
				}
				break;
			case NOT_EQUAL:
				enterOuterAlt(_localctx, 5);
				{
				setState(109);
				match(NOT_EQUAL);
				sb.append("!=");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_valueContext extends ParserRuleContext {
		public StringBuilder sb;
		public Int_operationsContext int_operations() {
			return getRuleContext(Int_operationsContext.class,0);
		}
		public List<Int_valueContext> int_value() {
			return getRuleContexts(Int_valueContext.class);
		}
		public Int_valueContext int_value(int i) {
			return getRuleContext(Int_valueContext.class,i);
		}
		public TerminalNode VAR() { return getToken(PrefixGrammarParser.VAR, 0); }
		public TerminalNode NUMBER() { return getToken(PrefixGrammarParser.NUMBER, 0); }
		public Int_valueContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Int_valueContext(ParserRuleContext parent, int invokingState, StringBuilder sb) {
			super(parent, invokingState);
			this.sb = sb;
		}
		@Override public int getRuleIndex() { return RULE_int_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).enterInt_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixGrammarListener ) ((PrefixGrammarListener)listener).exitInt_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixGrammarVisitor ) return ((PrefixGrammarVisitor<? extends T>)visitor).visitInt_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Int_valueContext int_value(StringBuilder sb) throws RecognitionException {
		Int_valueContext _localctx = new Int_valueContext(_ctx, getState(), sb);
		enterRule(_localctx, 20, RULE_int_value);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
			case MINUS:
			case MULL:
			case DIV:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				int_operations(sb);
				setState(114);
				int_value(sb);
				setState(115);
				int_value(sb);
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(VAR);
				sb.append("VAR");
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(NUMBER);
				sb.append("NUMBER");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
